docs(phase5): native distribution design + logging cross-doc sync
Phase 5 native design: GraalVM 25 + JDK 25 LTS, reachability-metadata.json
format, runtime aggregation (scheme A), CI delegation for win-x64 (no local
MSVC), and native.yml workflow. Sync 10-logging-design.md to the native
slf4j-simple switch.

Co-Authored-By: Claude <noreply@anthropic.com>